[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxo-redes"
version = "1.0.0"
description = "Trabalho de Fluxo em Redes — Caminho Mínimo (Bellman recursivo, Dijkstra heap, Floyd-Warshall)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "networkx>=3.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
